<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".features.playlist.PlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerViewWidgetContainer"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/playerViewShortActionContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.cardview.widget.CardView
        android:id="@+id/playerViewShortActionContainer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/payerViewPlayerlistItemsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerViewWidgetContainer">

        <LinearLayout
            android:id="@+id/playerShortGroupContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playerShortActionFavorite"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_favorite_border_black_24dp"
                android:contentDescription="@string/player_content_desc_favorite_track" />

            <ImageView
                android:id="@+id/playerShortActionQueue"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_queue_music_black_24dp"
                android:contentDescription="@string/player_content_desc_enqueue_track" />

            <ImageView
                android:id="@+id/playerShortActionShare"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_share_black_24dp"
                android:contentDescription="@string/player_content_desc_share_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payerViewPlayerlistItemsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/payerViewPlayerlistActionContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerViewShortActionContainer"
        tools:listitem="@layout/playlist_item_rss_feed" />

    <androidx.cardview.widget.CardView
        android:id="@+id/payerViewPlayerlistActionContainer"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payerViewPlayerlistItemsRecycler">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/payerViewPlayerlistElementsGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dvr_position_label"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="Gilinho"
                android:textSize="10dp"
                app:layout_constraintBottom_toTopOf="@+id/payerViewPlayerlistActionSeek"
                app:layout_constraintEnd_toEndOf="@+id/payerViewPlayerlistActionSeek"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/payerViewPlayerlistActionSeek"
                tools:text="00:00:00"
                tools:visibility="visible" />

            <SeekBar
                android:id="@+id/payerViewPlayerlistActionSeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:max="100"
                app:layout_constraintBottom_toTopOf="@id/payerViewPlayerlistActionPlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <ImageView
                android:id="@+id/payerViewPlayerlistActionPlay"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/payerViewPlayerlistActionNext"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/payerViewPlayerlistActionPrev"
                app:layout_constraintTop_toBottomOf="@id/payerViewPlayerlistActionSeek"
                app:srcCompat="@drawable/exo_controls_play"
                android:contentDescription="@string/player_content_desc_play_track" />

            <ImageView
                android:id="@+id/payerViewPlayerlistActionPrev"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/payerViewPlayerlistActionPlay"
                app:layout_constraintEnd_toStartOf="@id/payerViewPlayerlistActionPlay"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/payerViewPlayerlistActionPlay"
                app:srcCompat="@drawable/exo_controls_previous"
                android:contentDescription="@string/player_content_desc_prev_track" />

            <ImageView
                android:id="@+id/payerViewPlayerlistActionNext"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/payerViewPlayerlistActionPlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/payerViewPlayerlistActionPlay"
                app:layout_constraintTop_toTopOf="@id/payerViewPlayerlistActionPlay"
                app:srcCompat="@drawable/exo_controls_next"
                android:contentDescription="@string/player_content_desc_next_track" />

            <TextView
                android:id="@+id/payerViewPlayerlistActionSeekStartValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="00:00"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorError"
                app:layout_constraintStart_toStartOf="@id/payerViewPlayerlistActionSeek"
                app:layout_constraintTop_toBottomOf="@id/payerViewPlayerlistActionSeek" />

            <TextView
                android:id="@+id/payerViewPlayerlistActionSeekEndValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="00:00"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorError"
                app:layout_constraintEnd_toEndOf="@id/payerViewPlayerlistActionSeek"
                app:layout_constraintTop_toBottomOf="@id/payerViewPlayerlistActionSeek" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/playerViewLoader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/player_view_error_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="error message" />

    <Button
        android:id="@+id/playerViewRetryAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/common_action_retry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/player_view_error_message_text"
        app:layout_constraintStart_toStartOf="@id/player_view_error_message_text"
        app:layout_constraintTop_toBottomOf="@id/player_view_error_message_text" />
</androidx.constraintlayout.widget.ConstraintLayout>