<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist_item_rss_feed_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/playlist_item_rss_feed_thumbnail"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/playlist_item_rss_feed_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/playlist_content_desc_thumbnail" />

        <ImageView
            android:id="@+id/playlist_item_rss_feed_info"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/ic_info_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/playlist_item_rss_feed_marker"
            app:layout_constraintEnd_toStartOf="@id/playlist_item_rss_feed_marker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/playlist_item_rss_feed_name"
            app:layout_constraintTop_toTopOf="@id/playlist_item_rss_feed_marker"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/playlist_content_desc_info" />

        <ImageView
            android:id="@+id/playlist_item_rss_feed_marker"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:tag="false"
            app:srcCompat="@drawable/ic_turned_in_not_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/playlist_item_rss_feed_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/playlist_item_rss_feed_info"
            app:layout_constraintTop_toTopOf="@id/playlist_item_rss_feed_thumbnail"
            android:contentDescription="@string/playlist_content_desc_book_mark" />

        <TextView
            android:id="@+id/playlist_item_rss_feed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/playlist_item_rss_feed_desc"
            app:layout_constraintEnd_toStartOf="@id/playlist_item_rss_feed_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/playlist_item_rss_feed_thumbnail"
            app:layout_constraintTop_toTopOf="@id/playlist_item_rss_feed_thumbnail"
            tools:text="TextView" />

        <TextView
            android:id="@+id/playlist_item_rss_feed_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/playlist_item_rss_feed_thumbnail"
            app:layout_constraintEnd_toEndOf="@id/playlist_item_rss_feed_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/playlist_item_rss_feed_name"
            app:layout_constraintTop_toBottomOf="@id/playlist_item_rss_feed_name"
            tools:text="TextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
